crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_source_tests__big_labeled_constructor_fields.snap
---
source: crates/nash-driver/src/compile/nitpick_source_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..), Data(..))\nimport Builtin\nimport Eq exposing (Eq)\nimport Literal exposing (FromInt, FromString, FromBytes)\ntype Packet = Packet { z : Int, a : Bytes } | Empty\nf value =\n    case value of\n        Empty -> ()\n"
info: diagnostic
---
nash::pattern::incomplete

  × Case expression is not exhaustive.
   ╭─[Main.nash:8:5]
 7 │     f value =
 8 │ ╭─▶     case value of
 9 │ ╰─▶         Empty -> ()
   ╰────
  help: Missing patterns:

            Packet _ _

        Add the missing branches; use `todo` for unfinished bodies.
