crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_source_tests__bytes_with_wildcard.snap
---
source: crates/nash-driver/src/compile/nitpick_source_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..), Data(..))\nimport Builtin\nimport Eq exposing (Eq)\nimport Literal exposing (FromInt, FromString, FromBytes)\nf bytes =\n    case bytes of\n        #\"00\" -> ()\n        _ -> ()\n"
---
()
